Correção da ROTA para o detalhe do evento.

--- a/templates/calendar/calendarEventsDayListTemplate.html
+++ b/templates/calendar/calendarEventsDayListTemplate.html
@@ -5,7 +5,7 @@
 		<% _.each(events, function(e) { %>
 
 			<li>
-				<a href="Calendar/Events/<%= e.get('eventID') %>" title="Ver evento">
+				<a href="/Calendar/Events/<%= e.get('eventID') %>" title="Ver evento">
 					<div class="hourly">
 
 						<% 
