--- a/templates/home/userMessageTemplate.html
+++ b/templates/home/userMessageTemplate.html
@@ -1,5 +1,5 @@
 <% if (route != "") { %>
-<a href="<%=route%>" class="routeMessage">
+<a href="<%=route%>" class="routeMessage" style="text-decoration: none;">
 <% } %>
 	<div class="<%=type%> message">
 		<% if (icon != "") { %>
