--- a/templates/chat/chatListItemsTemplate.html
+++ b/templates/chat/chatListItemsTemplate.html
@@ -1,6 +1,6 @@
+<% if (isConnected) { %>
 <% for (var i in contacts) { %>
-  <% if (contacts[i].length) { %>
-    <dt>
+    <dt id="list_title_<%=i%>" <% if (contacts[i].length == 0) { %>class="hidden"<% } %>>
       <% if (i == 'online') { %>Online<% } %>
       <% if (i == 'busy') { %>Ocupado<% } %>
       <% if (i == 'away') { %>Ausente<% } %>
@@ -24,5 +24,10 @@
         <% } %>
       <% }); %>
     </ul>
-  <% } %>
 <% } %>
+<% } else { %>
+<div id="errorMessage">
+
+</div>
+<% } %>
+
