--- a/templates/chat/chatListItemsTemplate.html
+++ b/templates/chat/chatListItemsTemplate.html
@@ -26,8 +26,26 @@
     </ul>
 <% } %>
 <% } else { %>
-<div id="errorMessage">
+  <dl id="chatHelp">
+      <dt>Está com problemas ao se conectar ao CHAT?</dt>
+      <dd>Tente reconectar, se o problema persistir verifique se você se enquadra em uma das seguintes situações.</dd>
+      <br> 
+      <br>
+      <dt>1 - O seu navegador pode ter bloqueado sua conexão.</dt>
+      <dd>Alguns navegadores podem bloquear a conexão no servidor de CHAT.<br><br>No navegador Firefox desabilite o bloqueio através destes 4 passos bem simples:<br>
+        <br><div class="firefox_help"></div>
+      </dd>
 
-</div>
+      <dt>2 - Sua conexão pode ter sido perdida</dt>
+      <dd>
+        Caso você esteja sem acesso a internet ou tenha passado com seu dispositivo móvel por uma área onde a conexão com a internet tenha sido temporariamente perdida, você será desconectado do serviço de CHAT. Para conectar-se novamente, basta fechar e abrir o aplicativo. Caso esteja em um navegador WEB, atualize a sua página.
+        <br><br><br>
+      </dd>
+      <dt>3 - Você pode estar conectado em outro local</dt>
+      <dd>
+        Você pode estar conectado no CHAT em outro computador ou em outra aba do seu navegador. O serviço de CHAT aceita poucas conexões por usuário, e caso você tenha se logado em outro lugar sua conexão será perdida.
+        <br><br><br>
+      </dd>
+  </dl>
 <% } %>
 
