Correção do IM.

--- a/templates/chat/chatListItemsTemplate.html
+++ b/templates/chat/chatListItemsTemplate.html
@@ -43,7 +43,7 @@
       </dd>
       <dt>3 - Você pode estar conectado em outro local</dt>
       <dd>
-        Você pode estar conectado no CHAT em outro computador ou em outra aba do seu navegador. O serviço de CHAT aceita poucas conexões por usuário, e caso você tenha se logado em outro lugar sua conexão será perdida.
+        Você pode estar conectado no CHAT em outro computador ou em outra aba do seu navegador. O serviço de CHAT aceita apenas uma conexão por usuário, e caso você tenha se logado em outro lugar sua conexão será perdida.
         <br><br><br>
       </dd>
   </dl>
