--- a/templates/home/homeTemplate.html
+++ b/templates/home/homeTemplate.html
@@ -6,6 +6,7 @@
   <div id="page" class="left">
     <div id="pageSwipe" style=""></div>
     <header id="pageHeader" class="topHeader">
+      <div id="isOffline" style="display: none; position: absolute; margin-left: 50px;"><div style="margin: 5px;" class="message error">Voc&ecirc; est&aacute; trabalhando Offline.</div></div>
       <div id="pageMessage"></div>
       <div style="margin-left: -3px; margin-top: 50px; z-index: 5000;" id="beta" class="hidden"></div>
       <ul class="left topButtons">
